--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "ejs": "~0.8.5"
+    "ejs": "~0.8.5",
+    "stripe": "~2.5.0"
   }
 }
