go cardless implementation

--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
-    "stripe": "~2.5.0"
+    "stripe": "~2.5.0",
+    "gocardless": "^1.0.0-beta6"
   }
 }
