added grunt, added sass compile and watch tasks, added bower.json for sass components, updated .gitignore

--- a/membership/.gitignore
+++ b/membership/.gitignore
@@ -13,3 +13,7 @@ dist
 /.project
 /RUNNING_PID
 /.settings
+node_modules
+app/assets/stylesheets/components
+app/assets/javascripts/components
+public/stylesheets
