--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 node_modules
-.idea
 app/npm-debug.log
+
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+.idea
+*.iml
+out
+.idea_modules
