Moving Eventbrite url to config

--- a/membership/conf/application.conf
+++ b/membership/conf/application.conf
@@ -1,6 +1,11 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+#TODO Move these test configs to the dev config file
+eventbrite.user.events-url="https://www.eventbriteapi.com/v3/users/99154249965/owned_events"
+eventbrite.token="***REMOVED***"
+
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
