--- a/membership/package.json
+++ b/membership/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-jshint": "^0.9.2",
     "karma": "^0.12.12",
     "karma-chrome-launcher": "^0.1.3",
     "bower": "^1.3.3",
