--- a/membership/package.json
+++ b/membership/package.json
@@ -8,11 +8,13 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
-    "karma": "^0.12.12",
+    "karma": "~0.12.14",
     "karma-chrome-launcher": "^0.1.3",
     "bower": "^1.3.3",
     "karma-jasmine": "^0.1.5",
     "grunt-cli": "^0.1.13",
-    "requirejs": "^2.1.11"
+    "requirejs": "^2.1.11",
+    "grunt-karma": "~0.8.3",
+    "karma-phantomjs-launcher": "~0.1.4"
   }
 }
