--- a/membership/package.json
+++ b/membership/package.json
@@ -15,6 +15,7 @@
     "grunt-cli": "^0.1.13",
     "requirejs": "^2.1.11",
     "grunt-karma": "~0.8.3",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-requirejs": "~0.2.1"
   }
 }
