movement of frontend files to a folder outside of the scala app, setup of requireJs grunt task, removal of scripts in public, added relevant folders to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ dist
 *.iml
 out
 .idea_modules
+membership/public/javascripts
+membership/public/stylesheets
+membership/common/app/assets/javascripts/components
+membership/common/app/assets/stylesheets/components
