--- a/membership/package.json
+++ b/membership/package.json
@@ -12,6 +12,8 @@
     "bower": "^1.3.3",
     "karma-jasmine": "^0.1.5",
     "grunt-cli": "^0.1.13",
-    "requirejs": "^2.1.11"
+    "requirejs": "^2.1.11",
+    "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
