--- a/membership/common/app/assets/javascripts/bower.json
+++ b/membership/common/app/assets/javascripts/bower.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "qwery": "~4.0.0",
-    "bonzo": "~2.0.0"
+    "bonzo": "~2.0.0",
+    "domready": "~1.0.5",
+    "requirejs": "~2.1.11"
   }
 }
