--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ dist
 *.iml
 out
 .idea_modules
-membership/public/javascripts
-membership/public/stylesheets
-membership/common/app/assets/javascripts/components
-membership/common/app/assets/stylesheets/components
+public/javascripts
+public/stylesheets
+common/app/assets/javascripts/components
+common/app/assets/stylesheets/components
+common/app/assets/javascripts/libs/bower-components/
