Refactoring Subscription class

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,6 +5,8 @@
 eventbrite.user.events-url="https://www.eventbriteapi.com/v3/users/99154249965/owned_events"
 eventbrite.token="***REMOVED***"
 
+stripe.apiKey="***REMOVED***"
+
 
 # Secret key
 # ~~~~~
