sass gem install

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ public/javascripts
 public/stylesheets
 common/app/assets/stylesheets/components
 common/app/assets/javascripts/lib/bower-components/
+
+.bundle
+Gemfile.lock
