--- a/common/app/assets/stylesheets/bower.json
+++ b/common/app/assets/stylesheets/bower.json
@@ -1,7 +1,24 @@
 {
-  "name": "membership stylesheets",
-  "version": "0.0.0",
-  "dependencies": {
-    "guss": "~1.1.0"
-  }
+    "name": "membership stylesheets",
+    "version": "0.0.0",
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "test",
+        "tests",
+        "source",
+        "spec",
+        ".bowerrc",
+        ".gitignore",
+        ".jshintignore",
+        ".jshintrc",
+        "bower.json",
+        "gruntfile.js",
+        "package.json",
+        "README.md"
+    ],
+    "dependencies": {
+        "guss": "~1.1.0"
+    }
 }
