--- a/conf/upstart.conf
+++ b/conf/upstart.conf
@@ -21,5 +21,5 @@ chdir $USER_HOME
 respawn
 
 script
-  "$USER_HOME/app/bin/app" -mem 512 > $LOGFILE 2>&1
+  "$USER_HOME/app/bin/$USER" -mem 512 > $LOGFILE 2>&1
 end script
