Remove variables from upstart stanzas - don't think it supports them!
```
ubuntu@ip-10-248-132-238:~$ sudo start membership-app MANAGEMENT_PORT=9000
start: Job failed to start
```

--- a/conf/upstart.conf
+++ b/conf/upstart.conf
@@ -1,11 +1,11 @@
 # Upstart service configuration
 env USER=membership
-env USER_HOME="/$USER"
+env USER_HOME=/membership
 
 env MANAGEMENT_PORT=9000
 export MANAGEMENT_PORT
 
-env LOGFILE="$USER_HOME/stdout.log"
+env LOGFILE="/membership/stdout.log"
 
 start on runlevel [2345]
 stop on runlevel [016]
@@ -13,13 +13,13 @@ stop on runlevel [016]
 # NB: setuid is only supported on recent versions of upstart - i.e.
 #  on ubuntu not on amazon linux
 
-setuid $USER
+setuid membership
 
-chdir $USER_HOME
+chdir /membership
 
 # automatically restart if the process dies
 respawn
 
 script
-  "$USER_HOME/app/bin/$USER" -mem 512 > $LOGFILE 2>&1
+  "/membership/membership-1.0-SNAPSHOT/bin/membership" -mem 512 > $LOGFILE 2>&1
 end script
