added event brite membership account api details to conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,7 +8,11 @@
 #eventbrite.token="***REMOVED***"
 
 # Chris
-eventbrite.event-list-url="https://www.eventbriteapi.com/v3/users/99154249965/owned_events/"
+#eventbrite.event-list-url="https://www.eventbriteapi.com/v3/users/99154249965/owned_events/"
+#eventbrite.token="***REMOVED***"
+
+# Membership
+eventbrite.event-list-url="https://www.eventbriteapi.com/v3/users/101063397097/owned_events/"
 eventbrite.token="***REMOVED***"
 
 eventbrite.event-url="https://www.eventbriteapi.com/v3/events"
