A crappy healthcheck url - our frontpage! - to get the ELB happy

--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -131,7 +131,7 @@
                 "SecurityGroups" : [ { "Ref" : "LoadBalancerSecurityGroup" } ],
                 "Subnets" : { "Ref" : "Subnets" },
                 "HealthCheck" : {
-                    "Target" : "HTTP:9000/management/healthcheck",
+                    "Target" : "HTTP:9000/",
                     "HealthyThreshold" : "2",
                     "UnhealthyThreshold" : "2",
                     "Interval" : "10",
