--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -15,7 +15,7 @@
         "Stack": {
             "Description": "Applied directly as a tag",
             "Type": "String",
-            "Default" : "made-up-stack"
+            "Default" : "memb-masterclasses"
         },
         "KeyName" : {
             "Description" : "The EC2 Key Pair to allow SSH access to the instance",
