--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -145,7 +145,9 @@
                 "GroupDescription" : "Permit HTTP access on port 80, egress to port 9000",
                 "VpcId" : { "Ref" : "VpcId" },
                 "SecurityGroupIngress" : [
-                    { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "77.91.248.0/21" }
+                    { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "77.91.248.0/21" },
+                    { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "80.254.158.92/32" },
+                    { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "80.254.146.68/32" }
                 ],
                 "SecurityGroupEgress" : [
                     { "IpProtocol": "tcp", "FromPort": "9000", "ToPort": "9000", "CidrIp": "0.0.0.0/0" }
