Get acceptable SSH keys from the S3 dist bucket
Much more conveneient than everyone using the same AWS PEM keyfile - now
we can use our own! Just ensure your SSH key is manually added to:

https://s3-eu-west-1.amazonaws.com/membership-dist/authorized_keys

The Content-API Teamget credit for coming up with the idea:

https://github.com/guardian/content-api/blob/25ca273/explorer/cloud-formation/cfn.json#L78

--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -83,6 +83,8 @@
 
                         "adduser --system --home /membership --disabled-password membership",
 
+                        "wget -N --directory-prefix=/home/ubuntu/.ssh https://s3-eu-west-1.amazonaws.com/membership-dist/authorized_keys &",
+
                         {"Fn::Join":["/", ["wget https://s3-eu-west-1.amazonaws.com/membership-dist", { "Ref" : "Stack" }, { "Ref" : "Stage" },  "membership-app/app.zip --directory-prefix=/tmp"]]},
 
                         "unzip -d /membership /tmp/app.zip",
