Setup HTTPS to support sign-in

--- a/nginx/membership.conf
+++ b/nginx/membership.conf
@@ -3,5 +3,27 @@ server {
 
     location / {
         proxy_pass http://localhost:9000/;
+        proxy_set_header Host $http_host;
     }
+}
+
+server {
+    listen 443;
+    server_name mem.thegulocal.com;
+
+    ssl on;
+    ssl_certificate membership.crt;
+    ssl_certificate_key membership.key;
+
+    ssl_session_timeout 5m;
+
+    ssl_protocols SSLv2 SSLv3 TLSv1;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_pass http://localhost:9000/;
+        proxy_set_header Host $http_host;
+    }
+
 }
