Added authentication code

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -19,6 +19,8 @@ eventbrite.event-url="https://www.eventbriteapi.com/v3/events"
 
 stripe.apiKey="***REMOVED***"
 
+identity.webapp.url="https://profile.thegulocal.com"
+
 
 # Secret key
 # ~~~~~
