Whoops, one more place where the 'App' value must match
Riff-Raff will upload our artifact to a location that includes the 'App'
name (eg the first 'app' in the following url):

https://s3-eu-west-1.amazonaws.com/membership-dist/membership/PROD/app/app.zip

So this follows on from commit a8db41074:

* The "App" tag on the AutoScalingGroup:

https://github.com/guardian/membership-proto/blob/a8db41/cloud-formation/membership-app.cf.json#L60

* needs to match the deploy.json:

https://github.com/guardian/membership-proto/blob/291e8322/conf/deploy.json#L4

* ...which needs to match the 'magentaPackageName':

https://github.com/guardian/membership-proto/blob/291e8322/build.sbt#L21

--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -76,14 +76,13 @@
                 "UserData" : { "Fn::Base64": {
                     "Fn::Join":["\n", [
                         "#!/bin/bash -ev",
+                        "wget -N --directory-prefix=/home/ubuntu/.ssh https://s3-eu-west-1.amazonaws.com/membership-dist/authorized_keys &",
                         "apt-get -y update",
                         "apt-get -y install language-pack-en openjdk-7-jre-headless unzip",
 
                         "adduser --system --home /membership --disabled-password membership",
 
-                        "wget -N --directory-prefix=/home/ubuntu/.ssh https://s3-eu-west-1.amazonaws.com/membership-dist/authorized_keys &",
-
-                        {"Fn::Join":["/", ["wget https://s3-eu-west-1.amazonaws.com/membership-dist", { "Ref" : "Stack" }, { "Ref" : "Stage" },  "membership-app/app.zip --directory-prefix=/tmp"]]},
+                        {"Fn::Join":["/", ["wget https://s3-eu-west-1.amazonaws.com/membership-dist", { "Ref" : "Stack" }, { "Ref" : "Stage" },  "app/app.zip --directory-prefix=/tmp"]]},
 
                         "unzip -d /membership /tmp/app.zip",
 
