Set the correct return URL

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,6 +21,8 @@ stripe.apiKey="***REMOVED***"
 
 identity.webapp.url="https://profile.thegulocal.com"
 
+membership.url="https://mem.thegulocal.com"
+
 
 # Secret key
 # ~~~~~
