Stack dependent config for Masterclasses
To try this out locally, pass through the 'config.resource' parameter:

$ sbt -Dconfig.resource=memb-masterclasses.conf

In AWS environments, the Cloud-Formation script writes out an environment
variable that's made available to the upstart script, and thus the
running Play app (as an alternative to installing aws-cli on our boxes).

--- a/conf/upstart.conf
+++ b/conf/upstart.conf
@@ -21,5 +21,5 @@ chdir /membership
 respawn
 
 script
-  "/membership/membership-1.0-SNAPSHOT/bin/membership" -mem 512 > $LOGFILE 2>&1
+  "/membership/membership-1.0-SNAPSHOT/bin/membership" -mem 512 -Dconfig.resource=$APP_STACK.conf > $LOGFILE 2>&1
 end script
