Make the stack variable accessible to the upstart script...

--- a/conf/upstart.conf
+++ b/conf/upstart.conf
@@ -21,5 +21,6 @@ chdir /membership
 respawn
 
 script
+  source /etc/gu-environment
   "/membership/membership-1.0-SNAPSHOT/bin/membership" -mem 512 -Dconfig.resource=$APP_STACK.conf > $LOGFILE 2>&1
 end script
