--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -79,8 +79,8 @@
                         "wget -N --directory-prefix=/home/ubuntu/.ssh https://s3-eu-west-1.amazonaws.com/membership-dist/authorized_keys &",
                         "apt-get -y update",
                         "apt-get -y install language-pack-en openjdk-7-jre-headless unzip",
-                        {"Fn::Join":["", ["echo APP_STACK=", { "Ref" : "Stack" }, " >> /etc/environment"]]},
-                        
+                        {"Fn::Join":["", ["echo APP_STACK=", { "Ref" : "Stack" }, " >> /etc/gu-environment"]]},
+
                         "adduser --system --home /membership --disabled-password membership",
 
                         {"Fn::Join":["/", ["wget https://s3-eu-west-1.amazonaws.com/membership-dist", { "Ref" : "Stack" }, { "Ref" : "Stage" },  "app/app.zip --directory-prefix=/tmp"]]},
