--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -58,8 +58,7 @@
                 "Tags" : [
                     { "Key" : "Stack", "Value" : { "Ref" : "Stack" }, "PropagateAtLaunch" : "true" },
                     { "Key" : "App", "Value" : "app", "PropagateAtLaunch" : "true" },
-                    { "Key" : "Stage", "Value" : { "Ref" : "Stage" }, "PropagateAtLaunch" : "true"  },
-                    { "Key" : "Management", "Value" : "port=9000", "PropagateAtLaunch" : "true" }
+                    { "Key" : "Stage", "Value" : { "Ref" : "Stage" }, "PropagateAtLaunch" : "true"  }
                 ]
             }
         },
