--- a/frontend/conf/upstart.conf
+++ b/frontend/conf/upstart.conf
@@ -22,5 +22,5 @@ respawn
 
 script
   source /etc/gu-environment
-  "/membership/frontend-1.0-SNAPSHOT/bin/membership" -mem 512 -Dconfig.resource=$APP_STACK.conf > $LOGFILE 2>&1
+  "/membership/frontend-1.0-SNAPSHOT/bin/frontend" -mem 512 -Dconfig.resource=$APP_STACK.conf > $LOGFILE 2>&1
 end script
