Moved API and frontend ports to not clash with frontend

--- a/nginx/membership.conf
+++ b/nginx/membership.conf
@@ -1,8 +1,37 @@
 server {
+    server_name memapi.thegulocal.com;
+
+    location / {
+        proxy_pass http://localhost:9100;
+        proxy_set_header Host $http_host;
+    }
+}
+
+server {
+    listen 443;
+    server_name memapi.thegulocal.com;
+
+    ssl on;
+    ssl_certificate membership.crt;
+    ssl_certificate_key membership.key;
+
+    ssl_session_timeout 5m;
+
+    ssl_protocols SSLv2 SSLv3 TLSv1;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    location / {
+        proxy_pass http://localhost:9100/;
+        proxy_set_header Host $http_host;
+    }
+}
+
+server {
     server_name mem.thegulocal.com;
 
     location / {
-        proxy_pass http://localhost:9000/;
+        proxy_pass http://localhost:9101/;
         proxy_set_header Host $http_host;
     }
 }
@@ -22,8 +51,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     location / {
-        proxy_pass http://localhost:9000/;
+        proxy_pass http://localhost:9101/;
         proxy_set_header Host $http_host;
     }
-
 }
