add masterclasses config switch and content

--- a/frontend/conf/memb-masterclasses.conf
+++ b/frontend/conf/memb-masterclasses.conf
@@ -2,5 +2,6 @@
 
 include "application"
 
+hideMembershipProposition=true
 eventbrite.event-list-url="https://www.eventbriteapi.com/v3/events/search/?user.id=7266571413"
 eventbrite.token="***REMOVED***"
