Remove use of 'source' from upstart script
The environment provided by upstart does not seem to provide 'source',
which is rather sad. Fall back to just transforming the upstart conf with
'sed' to get the 'stack' name in and the proper config (membership vs
masterclasses) applied.

/var/log/upstart/membership-app.log:
/proc/self/fd/9: 2: /proc/self/fd/9: source: not found

--- a/frontend/conf/upstart.conf
+++ b/frontend/conf/upstart.conf
@@ -21,6 +21,5 @@ chdir /membership
 respawn
 
 script
-  source /etc/gu-environment
-  "/membership/frontend-1.0-SNAPSHOT/bin/frontend" -mem 512 -Dconfig.resource=$APP_STACK.conf > $LOGFILE 2>&1
+  "/membership/frontend-1.0-SNAPSHOT/bin/frontend" -mem 512 -Dconfig.resource=__STACK.conf > $LOGFILE 2>&1
 end script
