--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -13,9 +13,9 @@ eventbrite.event-url="https://www.eventbriteapi.com/v3/events"
 stripe.api.url="https://api.stripe.com/v1"
 stripe.api.secret="***REMOVED***"
 
-identity.webapp.url="https://profile.thegulocal.com"
+identity.webapp.url="https://profile.theguardian.com"
 
-membership.url="https://mem.thegulocal.com"
+membership.url="https://membership.theguardian.com"
 
 
 # Secret key
