Refactoring Config object - moving all config loads to one configuration.Config

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -74,4 +74,4 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-hideMembershipProposition=false
+membership.hide=false
