Use Production Identity key be default, PreProd in dev environment
...otherwise Identity cookies will fail to verify!

hence I got stuck in a login-loop here:

https://profile.theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.theguardian.com%2Fjoin%2Fpartner%2Fpayment

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -14,6 +14,7 @@ stripe.api.url="https://api.stripe.com/v1"
 stripe.api.secret="***REMOVED***"
 
 identity.webapp.url="https://profile.theguardian.com"
+identity.production.keys=true
 
 membership.url="https://membership.theguardian.com"
 
