--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -13,5 +13,6 @@
 include "membership"
 
 identity.webapp.url="https://profile.thegulocal.com"
+identity.production.keys=false
 
 membership.url="https://mem.thegulocal.com"
