Added access keys to dev.conf

--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -15,3 +15,6 @@ include "membership"
 identity.webapp.url="https://profile.thegulocal.com"
 
 membership.url="https://mem.thegulocal.com"
+
+aws.access.key=${?AWS_ACCESS_KEY}
+aws.secret.key=${?AWS_SECRET_KEY}
