--- a/frontend/conf/memb-masterclasses.conf
+++ b/frontend/conf/memb-masterclasses.conf
@@ -5,3 +5,5 @@ include "application"
 membership.hide=true
 eventbrite.event-list-url="https://www.eventbriteapi.com/v3/events/search/?user.id=7266571413"
 eventbrite.token="***REMOVED***"
+
+google.analytics.tracking.id="UA-51507017-2"
