Add cors headers so that /user/me can be accessed from profile.thegu.com

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -20,6 +20,7 @@ identity.production.keys=true
 
 membership.url="https://membership.theguardian.com"
 
+cors.allow.origin="https://profile.theguardian.com"
 
 # Secret key
 # ~~~~~
