--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -17,5 +17,7 @@ identity.production.keys=false
 
 membership.url="https://mem.thegulocal.com"
 
+cors.allow.origin="https://profile.thegulocal.com"
+
 aws.access.key=${?AWS_ACCESS_KEY}
 aws.secret.key=${?AWS_SECRET_KEY}
