Cleanup eventbrite config and introduce base API URL key

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -4,10 +4,10 @@
 #TODO Move these test configs to the dev config file
 
 # Config for the 'Vanilla' Membership site
-eventbrite.event-list-url="https://www.eventbriteapi.com/v3/users/101063397097/owned_events/"
-eventbrite.token="***REMOVED***"
 
-eventbrite.event-url="https://www.eventbriteapi.com/v3/events"
+eventbrite.api.url="https://www.eventbriteapi.com/v3"
+eventbrite.api.token="***REMOVED***"
+eventbrite.api.event-list-url="users/101063397097/owned_events/"
 
 google.analytics.tracking.id="UA-51507017-1"
 
