--- a/frontend/conf/memb-masterclasses.conf
+++ b/frontend/conf/memb-masterclasses.conf
@@ -3,7 +3,8 @@
 include "application"
 
 membership.hide=true
-eventbrite.event-list-url="https://www.eventbriteapi.com/v3/events/search/?user.id=7266571413"
-eventbrite.token="***REMOVED***"
+
+eventbrite.api.token="***REMOVED***"
+eventbrite.api.event-list-url="events/search/?user.id=7266571413"
 
 google.analytics.tracking.id="UA-51507017-2"
