Removed keys from application.conf

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -6,24 +6,18 @@ membership.hide=false
 cors.allow.origin="https://profile.theguardian.com"
 
 eventbrite.api.url="https://www.eventbriteapi.com/v3"
-eventbrite.api.token="***REMOVED***"
 eventbrite.api.event-list-url="users/101063397097/owned_events/"
 
 google.analytics.tracking.id="UA-51507017-1"
 
 stripe.api.url="https://api.stripe.com/v1"
-stripe.api.secret="***REMOVED***"
 
 identity.webapp.url="https://profile.theguardian.com"
 identity.production.keys=true
 
-#### Play Configuration
+include "keys.conf"
 
-# Secret key
-# ~~~~~
-# The secret key is used to secure cryptographics functions.
-# If you deploy your application to several instances be sure to use the same key!
-application.secret="***REMOVED***"
+#### Play Configuration
 
 # The application languages
 # ~~~~~
