Temporarily re-add EB token

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -6,6 +6,7 @@ membership.hide=false
 cors.allow.origin="https://profile.theguardian.com"
 
 eventbrite.api.url="https://www.eventbriteapi.com/v3"
+eventbrite.api.token="***REMOVED***"
 eventbrite.api.event-list-url="users/101063397097/owned_events/"
 
 google.analytics.tracking.id="UA-51507017-1"
