Stub properties in keys.conf for TC tests

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -12,13 +12,16 @@ eventbrite.api.event-list-url="users/101063397097/owned_events/"
 google.analytics.tracking.id="UA-51507017-1"
 
 stripe.api.url="https://api.stripe.com/v1"
+stripe.api.secret=""
 
 identity.webapp.url="https://profile.theguardian.com"
 identity.production.keys=true
 
-include "keys.conf"
-
 #### Play Configuration
+
+# Secret key
+# ~~~~~
+application.secret=""
 
 # The application languages
 # ~~~~~
@@ -32,3 +35,7 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+#### Import private keys
+
+include "keys.conf"
