--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -1,5 +1,7 @@
 # Config for the 'Vanilla' Membership site
 
+site.title="Membership"
+
 membership.url="https://membership.theguardian.com"
 membership.hide=false
 
