imported site-content.conf

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -1,6 +1,7 @@
 # Config for the 'Vanilla' Membership site
 
 site.title="Membership"
+index.title="Home Page"
 
 membership.url="https://membership.theguardian.com"
 membership.hide=false
@@ -39,5 +40,7 @@ logger.play=INFO
 logger.application=DEBUG
 
 #### Import private keys
-
 include file("/etc/gu/membership-keys.conf")
+
+#### Import Site Content
+include "site-content"
