format price for members and non-members

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -5,6 +5,8 @@ site.title="Membership"
 membership.url="https://membership.theguardian.com"
 membership.hide=false
 
+event.discountMultiplier=0.8
+
 cors.allow.origin="https://profile.theguardian.com"
 
 eventbrite.api.url="https://www.eventbriteapi.com/v3"
