Define a CNAME 'origin' for our frontend ELB in cloudformation
You can see the new 'origin' addresses here:

https://membership.theguardian.com.origin.membership.guardianapis.com/
https://masterclasses-alpha.theguardian.com.origin.membership.guardianapis.com/

We can now ask WebSys to point our user-facing domains (ie
membership.theguardian.com & masterclasses-alpha.theguardian.com) to our
'origin' servers rather than our ELB names, allowing us to destroy,
recreate and even replace ELBs without having to ask WebSys to reconfigure
Zabbix for us.

This follows on from https://jira.gutools.co.uk/browse/WSA-1463, where
@DiegoVazquezNanini gave us rights to administer subdomains of
'membership.guardianapis.com'. You can see what Record Sets we've
configured for that hosted zone in AWS Route 53 here:

https://console.aws.amazon.com/route53/home?region=eu-west-1#resource-record-sets:Z1E4V12LQGXFEC


```
$ dig masterclasses-alpha.theguardian.com.origin.membership.guardianapis.com

; <<>> DiG 9.9.5-3-Ubuntu <<>> masterclasses-alpha.theguardian.com.origin.membership.guardianapis.com
;; global options: +cmd
;; Got answer:
;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 13540
;; flags: qr rd ra; QUERY: 1, ANSWER: 2, AUTHORITY: 4, ADDITIONAL: 5

;; OPT PSEUDOSECTION:
; EDNS: version: 0, flags:; udp: 1280
;; QUESTION SECTION:
;masterclasses-alpha.theguardian.com.origin.membership.guardianapis.com.	IN A

;; ANSWER SECTION:
masterclasses-alpha.theguardian.com.origin.membership.guardianapis.com.	60 IN CNAME memb-mc-p-frontend-2uteywohph5j-1115944738.eu-west-1.elb.amazonaws.com.
memb-mc-p-frontend-2uteywohph5j-1115944738.eu-west-1.elb.amazonaws.com.	60 IN A	54.72.195.5

;; AUTHORITY SECTION:
eu-west-1.elb.amazonaws.com. 257 IN	NS	ns-2023.awsdns-60.co.uk.
eu-west-1.elb.amazonaws.com. 257 IN	NS	ns-739.awsdns-28.net.
eu-west-1.elb.amazonaws.com. 257 IN	NS	ns-341.awsdns-42.com.
eu-west-1.elb.amazonaws.com. 257 IN	NS	ns-1053.awsdns-03.org.

;; ADDITIONAL SECTION:
ns-1053.awsdns-03.org

--- a/cloud-formation/membership-app.cf.json
+++ b/cloud-formation/membership-app.cf.json
@@ -204,6 +204,17 @@
                     { "IpProtocol": "tcp", "FromPort": "9000", "ToPort": "9000", "SourceSecurityGroupId" : { "Ref" : "LoadBalancerSecurityGroup" } }
                 ]
             }
+        },
+        "FrontendELBDNSrecord" : {
+            "Type" : "AWS::Route53::RecordSet",
+            "Properties" : {
+                "HostedZoneId" : "/hostedzone/Z1E4V12LQGXFEC",
+                "Comment" : "CNAME for AWS ELB",
+                "Name" :  { "Fn::Join" : [ ".", [ { "Ref" : "SiteDomain" }, "origin.membership.guardianapis.com." ] ] },
+                "Type" : "CNAME",
+                "TTL" : "120",
+                "ResourceRecords" : [ {"Fn::GetAtt":["FrontendElasticLoadBalancer","DNSName"]} ]
+            }
         }
     },
     "Outputs": {
