--- a/frontend/common/app/assets/javascripts/bower.json
+++ b/frontend/common/app/assets/javascripts/bower.json
@@ -1,12 +1,13 @@
 {
-    "name": "membership stylesheets",
-    "version": "0.0.0",
-    "dependencies": {
-        "qwery": "~4.0.0",
-        "bonzo": "~2.0.0",
-        "domready": "~1.0.5",
-        "requirejs": "~2.1.11",
-        "bean": "~1.0.6",
-        "reqwest": "~1.1.0"
-    }
+  "name": "membership stylesheets",
+  "version": "0.0.0",
+  "dependencies": {
+    "qwery": "~4.0.0",
+    "bonzo": "~2.0.0",
+    "domready": "~1.0.5",
+    "requirejs": "~2.1.11",
+    "bean": "~1.0.6",
+    "reqwest": "~1.1.0",
+    "html5shiv": "~3.7.2"
+  }
 }
