--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "devDependencies": {
+    "bower": "^1.3.3",
     "grunt": "^0.4.4",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-karma": "~0.8.3",
+    "grunt-scss-lint": "^0.1.12",
+    "grunt-shell": "~0.7.0",
     "karma": "~0.12.14",
     "karma-chrome-launcher": "^0.1.3",
-    "bower": "^1.3.3",
     "karma-jasmine": "^0.1.5",
-    "grunt-cli": "^0.1.13",
-    "requirejs": "^2.1.11",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-copy": "^0.5.0",
-    "grunt-karma": "~0.8.3",
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-requirejs": "~0.2.1",
-    "grunt-shell": "~0.7.0"
+    "requirejs": "^2.1.11"
   }
 }
