readded sauce labs

--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -1,4 +1,4 @@
 "environment" : "local"
 "browser" : "chrome"
-"webDriverRemoteUrl" : "http://localhost:4444/wd/hub"
+"webDriverRemoteUrl" : "http://membershipdev:629a0aa3-44d8-40a9-a4ea-d904b860d242@ondemand.saucelabs.com:80/wd/hub"
 "testBaseUrl" : "https://mem.thegulocal.com"
