--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -1,4 +1,10 @@
 "environment" : "local"
 "browser" : "chrome"
 "webDriverRemoteUrl" : "http://membershipdev:629a0aa3-44d8-40a9-a4ea-d904b860d242@ondemand.saucelabs.com:80/wd/hub"
-"testBaseUrl" : "https://mem.thegulocal.com"
+"testBaseUrl" : "https://membership.theguardian.com"
+"user" : {
+  "identityReturn" : "https://profile.theguardian.com/signin?returnUrl=https%3A%2F%2Fmembership.theguardian.com",
+  "partnerPayment" : "https://membership.theguardian.com/join/partner/payment",
+  "accountEdit" : "https://profile.theguardian.com/account/edit",
+  "membershipEdit" : "https://profile.theguardian.com/membership/edit"
+}
