Fix missing route in identity URL

--- a/functional-tests/src/main/resources/project.conf
+++ b/functional-tests/src/main/resources/project.conf
@@ -7,5 +7,5 @@
   "partnerPayment" : "https://membership.theguardian.com/join/partner/payment",
   "accountEdit" : "https://profile.theguardian.com/account/edit",
   "membershipEdit" : "https://profile.theguardian.com/membership/edit",
-  "identity" : "https://profile.theguardian.com"
+  "identity" : "https://profile.theguardian.com/signin"
 }
