Update dev URLs

--- a/scalaforce/conf/application.conf
+++ b/scalaforce/conf/application.conf
@@ -1,3 +1,3 @@
-salesforce.api.url="https://emea.salesforce.com"
+salesforce.api.url="https://test.salesforce.com"
 
 include file("/etc/gu/membership-keys.conf")
