--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -28,3 +28,4 @@ cors.allow.origin="https://profile.thegulocal.com"
 aws.access.key=${?AWS_ACCESS_KEY}
 aws.secret.key=${?AWS_SECRET_KEY}
 
+salesforce.api.url="https://test.salesforce.com"
