Some initial Zuora configuration

--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -29,3 +29,8 @@ aws.access.key=${?AWS_ACCESS_KEY}
 aws.secret.key=${?AWS_SECRET_KEY}
 
 salesforce.api.url="https://test.salesforce.com"
+
+zuora.api.url {
+    rest="https://apisandbox-api.zuora.com/rest/v1"
+    soap="https://apisandbox.zuora.com/apps/services/a/58.0"
+}
