--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -30,6 +30,13 @@ salesforce.api.username=""
 salesforce.api.password=""
 salesforce.api.token=""
 
+zuora.api.url {
+    rest="https://api.zuora.com/rest"
+    soap="" # WHAT IS THIS?
+}
+zuora.api.username=""
+zuora.api.password=""
+
 #### Play Configuration
 
 # Secret key
