Added a debug panel to check authentication

--- a/frontend/conf/application.conf
+++ b/frontend/conf/application.conf
@@ -5,6 +5,7 @@ index.title="Home Page"
 
 membership.url="https://membership.theguardian.com"
 membership.hide=false
+membership.debug=false
 
 event.discountMultiplier=0.8
 
