--- a/frontend/conf/dev.conf
+++ b/frontend/conf/dev.conf
@@ -21,6 +21,7 @@ identity.webapp.url="https://profile.thegulocal.com"
 identity.production.keys=false
 
 membership.url="https://mem.thegulocal.com"
+membership.debug=true
 
 cors.allow.origin="https://profile.thegulocal.com"
 
